--- a/templates/login.xml
+++ b/templates/login.xml
@@ -2,7 +2,7 @@
     <fest:include src="./input_field_template.xml"/>
     <div id="login" class="row">
         <div class="col s12 m6 offset-m3">
-            <nav class="nav">
+            <nav class="nav nav-top">
                 <div class="nav-wrapper">
                     <a class="brand-logo center">Войти</a>
                     <ul class="left hide-on-med-and-down">
@@ -41,7 +41,7 @@
                         Неизвестный логин/пароль
                       </div>
                     <div>
-                        <input class="js-submit waves-effect waves-light btn" type="submit"></input>
+                        <input class="js-submit waves-effect waves-light btn" type="submit" value="Войти"></input>
                     </div>
                   </form>
               </div>
