--- a/templates/scoreboard.xml
+++ b/templates/scoreboard.xml
@@ -1,7 +1,7 @@
 <fest:template xmlns:fest="http://fest.mail.ru" context_name="json">
     <div id="scores" class="row">
         <div class="col s12 m6 offset-m3">
-            <nav class="nav">
+            <nav class="nav nav-top">
                 <div class="nav-wrapper">
                     <a class="brand-logo center">Рекорды</a>
                     <ul class="left hide-on-med-and-down">
