--- a/public_html/css/main.css
+++ b/public_html/css/main.css
@@ -4,6 +4,22 @@
 .nav-top {
   margin-top: 200px;
 }
+.flame__my{
+  margin-top:10px;
+  margin-left:26%;
+  position:absolute;
+  z-index: 100;
+
+}
+.flame__enemy{
+  margin-top:10px;
+  margin-left:25px;
+  position:absolute;
+  z-index: 100;
+}
+.button_done{
+  display: none;
+}
 html {
   background: url(../img/la.jpg) no-repeat center center fixed;
   background-size: cover;
@@ -26,10 +42,10 @@ html {
   height: 240px;
 }
 
-.form__avatar__video{
+.form__avatar__video {
   width: 320px;
   height: 240px;
-
+}
 #content-game {
   margin: 80px 70px;
   text-align: center;
