--- a/templates/main.xml
+++ b/templates/main.xml
@@ -3,7 +3,7 @@
         <div class="col s12 m6 offset-m3">
             <nav class="nav nav-top">
                 <div class="nav-wrapper">
-                    <a class="brand-logo center">SHOCK WORK</a>
+                    <a class="brand-logo center">Mastodonts Mail Group</a>
                 </div>
             </nav>
             <div class="collection">
