--- a/public_html/css/main.css
+++ b/public_html/css/main.css
@@ -4,6 +4,50 @@
 .nav-top {
   margin-top: 200px;
 }
+.restart__button__span{
+  position: absolute;
+  top: 14px;
+  left: 17px;
+  font-size: 32px;
+  color: aqua;
+}
+
+#restart_button{
+  position: absolute;
+  top: 540px;
+  left: 610px;
+  display:none;
+}
+
+.my_health{
+  color: brown;
+}
+.score{
+  width: 120px;
+  height:120px;
+  color: #940d13;
+  position: absolute;
+  left: 580px;
+  top: 100px;
+}
+.score span{
+  font: 52pt/40pt sans-serif;
+}
+#waiter{
+  width:100%;
+  height:100%;
+  position: fixed;
+  top: 0px;
+  left: 0px;
+  background-color: gray;
+  z-index:350;
+  opacity: 0.7;
+}
+.waiter__span{
+  position: fixed;
+  top: 200px;
+  left: 550px;
+}
 .flame__enemy{
   margin-top:10px;
   margin-left:25px;
