--- a/public_html/css/main.css
+++ b/public_html/css/main.css
@@ -4,20 +4,23 @@
 .nav-top {
   margin-top: 200px;
 }
-.restart__button__span{
-  position: absolute;
-  top: 14px;
-  left: 17px;
-  font-size: 32px;
-  color: aqua;
-}
-
 #restart_button{
-  position: absolute;
-  top: 540px;
-  left: 610px;
-  display:none;
-}
+   position: absolute;
+   top: 540px;
+   left: 610px;
+   display:none;
+   height: 70px;
+   width: 60px;
+   background-image: url(../../img/cards/button.png);
+   background-size: cover;
+ }
+ #restart_button:hover{
+   background-image: url(../../img/cards/button1.png);
+   top: 540px;
+   left: 600px;
+   height: 60px;
+   width: 70px;
+ }
 
 .my_health{
   color: brown;
@@ -53,6 +56,7 @@
   margin-left:25px;
   position:absolute;
   z-index: 100;
+  display: none;
 
 }
 .flame__my{
@@ -60,6 +64,7 @@
   margin-left:25px;
   position:absolute;
   z-index: 100;
+  display: none;
 }
 .button_done{
   display: none;
