--- a/templates/game.xml
+++ b/templates/game.xml
@@ -6,9 +6,7 @@
       <div class="loader-section section-right"></div>
    </div>
    <!--==============================================-->
-   <div id = "waiter">
-      <span class = ".waiter__span">Ожидание...</span>
-   </div>
+   <div id = "waiter"></div>
    <div id="game" class="row">
       <div class="col s12 m6 offset-m3">
          <nav class="nav">
