sdelal all verstka krome loader

--- a/public_html/css/build.css
+++ b/public_html/css/build.css
@@ -1363,6 +1363,12 @@ body.stop-scrolling {
 .nav-top {
   margin-top: 200px;
 }
+.js-insert-back{
+  margin-top: 50px;
+}
+.js-insert-back img{
+  margin-bottom: 15px;
+}
 .enemy__real__card{
   list-style: none;
 }
