--- a/public_html/css/main.css
+++ b/public_html/css/main.css
@@ -4,6 +4,12 @@
 .nav-top {
   margin-top: 200px;
 }
+.js-insert-back{
+  margin-top: 50px;
+}
+.js-insert-back img{
+  margin-bottom: 15px;
+}
 .enemy__real__card{
   list-style: none;
 }
