not working fix

--- a/public_html/css/build.css
+++ b/public_html/css/build.css
@@ -1661,6 +1661,10 @@ html {
   padding: 20px;
 
 }
+
+.hidden-card {
+  display: none;
+}
 /*! jQuery UI - v1.11.4 - 2015-03-11
 * http://jqueryui.com
 * Includes: core.css, accordion.css, autocomplete.css, button.css, datepicker.css, dialog.css, draggable.css, menu.css, progressbar.css, resizable.css, selectable.css, selectmenu.css, slider.css, sortable.css, spinner.css, tabs.css, tooltip.css, theme.css
