--- a/templates/game.xml
+++ b/templates/game.xml
@@ -47,7 +47,7 @@
                   <img class="flame__my" src="img/explosion.gif"/>
                   <img class="flame__enemy" src="img/explosion.gif"/>
                   <li class="ui-state-default hidden-card">
-                     <img src=""/>
+                     <img/>
                   </li>
                </div>
             </div>
