--- a/public_html/css/main.css
+++ b/public_html/css/main.css
@@ -161,18 +161,9 @@ html {
   color: #666;
   font-size: 1.5em;
 }
-#cardSlots,
-#cardSlots2 {
+#cardSlots{
   margin: 50px auto 50px auto;
   background: #ddf;
-}
-#cardPile,
-#cardPile2 {
-  margin: 0 auto;
-  background: #ffd;
-}
-#cardSlots,
-#cardSlots2 {
   width: 270px;
   height: 120px;
   padding: 10px 40px;
@@ -180,14 +171,31 @@ html {
   border-radius: 10px;
   box-shadow: 0 0 0.3em rgba(0, 0, 0, 0.8);
 }
-#cardPile,
-#cardPile2 {
+
+#cardSlots2 {
+  margin: 50px auto 50px auto;
+  background: #ddf;
   height: 110px;
   padding: 15px;
   border: 2px solid #333;
   border-radius: 10px;
   box-shadow: 0 0 0.3em rgba(0, 0, 0, 0.8);
 }
+#cardPile{
+  margin: 0 auto;
+  background: #ffd;
+  height: 110px;
+  padding: 15px;
+  border: 2px solid #333;
+  border-radius: 10px;
+  box-shadow: 0 0 0.3em rgba(0, 0, 0, 0.8);
+}
+
+#cardPile2 {
+  margin: 0 auto;
+  background: #ffd;
+}
+
 #cardSlots div,
 #cardPile div,
 #cardSlots2 div,
@@ -224,70 +232,14 @@ html {
   font-size: 50px;
   text-shadow: 0 0 3px #000;
 }
-#cardPile div.ui-draggable-dragging,
+#cardPile div.ui-draggable-dragging{
+  box-shadow: 0 0 0.5em rgba(0, 0, 0, 0.8);
+}
+
 #cardPile2 div.ui-draggable-dragging {
   box-shadow: 0 0 0.5em rgba(0, 0, 0, 0.8);
 }
-#card1.correct {
-  background: red;
-}
-#card2.correct {
-  background: brown;
-}
-#card3.correct {
-  background: orange;
-}
-#card4.correct {
-  background: yellow;
-}
-#card5.correct {
-  background: green;
-}
-#card6.correct {
-  background: cyan;
-}
-#card7.correct {
-  background: blue;
-}
-#card8.correct {
-  background: indigo;
-}
-#card9.correct {
-  background: purple;
-}
-#card10.correct {
-  background: violet;
-}
-#card11.correct {
-  background: red;
-}
-#card12.correct {
-  background: brown;
-}
-#card13.correct {
-  background: orange;
-}
-#card14.correct {
-  background: yellow;
-}
-#card15.correct {
-  background: green;
-}
-#card16.correct {
-  background: cyan;
-}
-#card17.correct {
-  background: blue;
-}
-#card18.correct {
-  background: indigo;
-}
-#card19.correct {
-  background: purple;
-}
-#card20.correct {
-  background: violet;
-}
+
 #successMessage {
   position: absolute;
   left: 580px;
