--- a/public_html/css/main.css
+++ b/public_html/css/main.css
@@ -196,7 +196,7 @@ html {
   background: #ffd;
 }
 
-#cardSlots div,
+/*#cardSlots div,
 #cardPile div,
 #cardSlots2 div,
 #cardPile2 div {
@@ -239,7 +239,7 @@ html {
 #cardPile2 div.ui-draggable-dragging {
   box-shadow: 0 0 0.5em rgba(0, 0, 0, 0.8);
 }
-
+*/
 #successMessage {
   position: absolute;
   left: 580px;
