--- a/public_html/css/build.css
+++ b/public_html/css/build.css
@@ -1363,10 +1363,10 @@ body.stop-scrolling {
 .nav-top {
   margin-top: 200px;
 }
-.js-insert-back{
+.mmg-insert-back{
   margin-top: 50px;
 }
-.js-insert-back img{
+.mmg-insert-back img{
   margin-bottom: 15px;
 }
 .enemy__real__card{
