--- a/public_html/css/main.css
+++ b/public_html/css/main.css
@@ -4,10 +4,10 @@
 .nav-top {
   margin-top: 200px;
 }
-.js-insert-back{
+.mmg-insert-back{
   margin-top: 50px;
 }
-.js-insert-back img{
+.mmg-insert-back img{
   margin-bottom: 15px;
 }
 .enemy__real__card{
