--- a/templates/game.xml
+++ b/templates/game.xml
@@ -18,7 +18,7 @@
             <div class="container">
                <div id = "user_stack" class="leftBar fl" style="">
                </div>
-               <div class="js-insert-back rightBar fr">
+               <div class="js-insert-back mmg-insert-back rightBar fr">
                </div>
                <div id="table">
                   <div class="leftBar fl">
